project section update

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <h4>Bachelor of Computer Science and Software Engineering</h4>
             <ul>
                 <li>
-                    Relevant Courses : Multimedia Applications Design, Software Project Management, Database Systems and Application, Networking Operating Systems, Advanced Object oriented Programming(JAVA)
+                    Relevant Courses : Multimedia Applications Design, Software Project Management, Database Systems and
+                    Application, Networking Operating Systems, Advanced Object oriented Programming(JAVA)
                 </li>
             </ul>
         </div>
@@ -129,14 +130,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/dacon.JPG" />
+                        <img src="images/dimensionlink-site-demonstration.gif" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h2>퇴근시간 버스인원 승차 예측</h2>
-                        <h3>프로젝트 기간 : 2019. 11 ~ 2019. 12</h3>
-                        <p>제주테크노파크에서 제공하는 제주 버스데이터로 18~20 시간대의 승차인원을 예측</p>
-                        <a href="https://github.com/chasimyeong/dacon_Mission13">View Project</a>
+                        <h2>Link generate site for Dimension</h2>
+                        <h3>Project Duration : 2019. 11. 19 ~ 2019. 12. 17</h3>
+                        <p>편한 링크 테스트와 어디서든 쉽게 링크 공유를 위한 사이트</p>
+                        <p>JavaScript | Vue</p>
+                        <a href="https://github.com/adc0612/Dimension_Link">Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -144,14 +146,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/video_classification.JPG" />
+                        <img src="images/campaigntest-site-demonstration.gif" alt="campaingn test site image" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h2>영상 등급 분류 보조 시스템</h2>
-                        <h3>프로젝트 기간 : 2019. 07 ~ 2019. 09</h3>
-                        <p>딥러닝 기반으로 영상에서 등급 분류에 필요한 객체들을 탐지하여 웹을 통하여 서비스를 제공</p>
-                        <a href="https://github.com/chasimyeong/.999">View Project</a>
+                        <h2>Campaign Test Link Site</h2>
+                        <h3>Project Duration : 2019. 09. 25 ~ 2019. 11. 01</h3>
+                        <p>주별, 국가별, 섹션별 URL 생성 사이트</p>
+                        <p>JavaScript | Vue</p>
+                        <a href="https://github.com/adc0612/campaign-test">Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -159,48 +162,20 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/K_Korea.JPG" />
+                        <img src="images/covid-19-dashboard-demonstration.gif" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h2>자동차 이미지 데이터셋을 이용한 차종 분류</h2>
-                        <h3>프로젝트 기간 : 2019. 06 ~ 2019. 08</h3>
-                        <p>총 16,140개의 이미지와 바운딩박스 좌표로 이루어진 데이터로 인공신경망 모델을 통한 차종 분류</p>
-                        <a href="https://github.com/chasimyeong/Kaggle_3rdML">View Project</a>
+                        <h2>Covid-19 Dashboard</h2>
+                        <h3>Project Duration : 2021. 02. 23 ~ </h3>
+                        <p>Javascript로 만든 코로나 세계 현황판을 Typescript로 변환하는 프로젝트</p>
+                        <p>JavaScript | Typescript | axios | chart.js</p>
+                        <a href="https://github.com/adc0612/Covid-19-Dashboard">Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/stock.JPG" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h2>감성분석과 주가관련 보조지표를 활용한 주가 등락 예측</h2>
-                        <h3>프로젝트 기간 : 2019. 03 ~ 2019. 07</h3>
-                        <p>과거의 데이터들로 주가 관련 보조지표를 만들고, 뉴스 기사를 통해 감성분석 데이터를 활용하여 다음날 종가의 등락을 예측</p>
-                        <a href="https://smecsmpf.tistory.com/10">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/dacon.JPG" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h2>아파트 실 거래가 예측</h2>
-                        <h3>프로젝트 기간 : 2019. 05 ~ 2019. 06</h3>
-                        <p>국토교통부에서 제공하는 데이터로 아파트와 관련된 층, 평수, 매매일자, 시, 동 등으로 아파트 실 거래가를 예측</p>
-                        <a href="https://github.com/chasimyeong/dacon_apt_mission">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
             </div>
         </div>
     </div>
@@ -211,30 +186,29 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>Python</li>
-            <li>R</li>
-            <li>Java</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>JavaScript</li>
-            <li>Jupyter Notebook</li>
-            <li>Pycharm</li>
-            <li>Android</li>
-            <li>Sublime Text</li>
-            <li>MSSQL</li>
-            <li>SQLite3</li>
+            <li>TypeScript</li>
+            <li>Vue</li>
+            <li>Sass</li>
+            <li>Git</li>
         </ul>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
         <h2 class="heading">Contact</h2>
-        <h3>
-           adc0612@gmail.com
-        </h3>
-        <h3>
+        <p>
+            <span>Email: </span>
+            <span>adc0612@gmail.com</span>
+        </p>
+        <p>
+            <span>Blog: </span>
             <a href="https://adc0612.github.io/">
                 https://adc0612.github.io/
             </a>
-        </h3>
+        </p>
         <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
@@ -258,12 +232,6 @@
                             <a href="https://github.com/adc0612" target="_blank"><i class="fa fa-github"
                                     aria-hidden="true"></i></a>
                         </li>
-
-                        <!-- <li>
-                            <a href="https://www.instagram.com/casim0" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/casimyung" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> -->
                     </ul>
                 </div>
             </div>
