--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <h2>Link generate site for Dimension</h2>
                         <h3>Project Duration : 2019. 11. 19 ~ 2019. 12. 17</h3>
                         <p>편한 링크 테스트와 어디서든 쉽게 링크 공유를 위한 사이트</p>
-                        <p>JavaScript | Vue</p>
+                        <p>Vue | JavaScript</p>
                         <a href="https://github.com/adc0612/Dimension_Link">Source Code</a>
                     </div>
                     <!-- End .project-info -->
@@ -153,7 +153,7 @@
                         <h2>Campaign Test Link Site</h2>
                         <h3>Project Duration : 2019. 09. 25 ~ 2019. 11. 01</h3>
                         <p>주별, 국가별, 섹션별 URL 생성 사이트</p>
-                        <p>JavaScript | Vue</p>
+                        <p>Vue | JavaScript</p>
                         <a href="https://github.com/adc0612/campaign-test">Source Code</a>
                     </div>
                     <!-- End .project-info -->
