project detail edit

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <h3>Project Duration : 2019. 11. 19 ~ 2019. 12. 17</h3>
                         <p>편한 링크 테스트와 어디서든 쉽게 링크 공유를 위한 사이트</p>
                         <p>Vue | JavaScript</p>
-                        <a href="https://github.com/adc0612/Dimension_Link">Source Code</a>
+                        <a href="https://github.com/adc0612/Dimension_Link" target="_blank">Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -155,7 +155,7 @@
                         <h3>Project Duration : 2019. 09. 25 ~ 2019. 11. 01</h3>
                         <p>주별, 국가별, 섹션별 URL 생성 사이트</p>
                         <p>Vue | JavaScript</p>
-                        <a href="https://github.com/adc0612/campaign-test">Source Code</a>
+                        <a href="https://github.com/adc0612/campaign-test" target="_blank">Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -168,10 +168,10 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h2>Covid-19 Dashboard</h2>
-                        <h3>Project Duration : 2021. 02. 23 ~ </h3>
+                        <h3>Project Duration : 2021. 02. 23 ~ 2021. 03. 04</h3>
                         <p>Javascript로 만든 코로나 세계 현황판을 Typescript로 변환하는 프로젝트</p>
                         <p>JavaScript | Typescript | axios | chart.js</p>
-                        <a href="https://github.com/adc0612/Covid-19-Dashboard">Source Code</a>
+                        <a href="https://github.com/adc0612/Covid-19-Dashboard" target="_blank">Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
