skill react added

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             <div class="skill_img_container" id="skill_img5"><span aria-hidden="true">Sass</span></div>
             <div class="skill_img_container" id="skill_img6"><span aria-hidden="true">Vue</span></div>
             <div class="skill_img_container" id="skill_img7"><span aria-hidden="true">Git</span></div>
+            <div class="skill_img_container" id="skill_img8"><span aria-hidden="true">React</span></div>
         </div>
     </div>
     <!-- End #skills -->
